--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "prisma": "^7.3.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.16.0"
+    "@types/pg": "^8.16.0",
+    "nodemon": "^3.1.11"
   }
 }
